@@ -5,7 +5,14 @@ repoze.who changes
 Next release
 ============
 
-- ...
+- Fixed an issue that caused the following symptom when using the
+  ini configuration parser:
+
+  TypeError: _makePlugin() got multiple values for keyword argument 'name'
+
+  See http://bugs.repoze.org/issue92 for more details.  Thanks to vaab
+  for the bug report and initial fix.
+
 
 1.0.15 (2009/06/25)
 ===================
